[gd_scene load_steps=8 format=3 uid="uid://bmaslnqyyovuu"]

[ext_resource type="Script" path="res://scenes/Enemy/Rangedenemy.gd" id="1_cf61y"]
[ext_resource type="Texture2D" uid="uid://nmknpt7hl4sb" path="res://icon.svg" id="2_nhci1"]
[ext_resource type="PackedScene" uid="uid://c8225n835xmdp" path="res://scenes/utility/HitBox.tscn" id="3_6poxk"]
[ext_resource type="PackedScene" uid="uid://bw6ei0umvxfbj" path="res://scenes/utility/HurtBox.tscn" id="4_p4njh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpbbu"]
size = Vector2(49, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_hebl2"]
radius = 29.1548

[sub_resource type="CircleShape2D" id="CircleShape2D_k7vq7"]
radius = 38.2099

[node name="RangedEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
motion_mode = 1
script = ExtResource("1_cf61y")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.923354, 0.104809, 0.0438976, 1)
position = Vector2(1.90735e-06, -1)
scale = Vector2(0.382813, 0.390625)
texture = ExtResource("2_nhci1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -2)
shape = SubResource("RectangleShape2D_dpbbu")

[node name="HitBox" parent="." instance=ExtResource("3_6poxk")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
visible = false
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_hebl2")

[node name="HurtBox" parent="." instance=ExtResource("4_p4njh")]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_k7vq7")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="BulletTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="BulletAtkTimer" type="Timer" parent="BulletTimer"]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="BulletTimer/BulletAtkTimer" to="." method="_on_bullet_atk_timer_timeout"]

[editable path="HitBox"]
[editable path="HurtBox"]
